if(EOS_USE_DRIVER_ILI9341)
    add_subdirectory("ILI9341")
elseif(EOS_USE_DRIVER_KS0108)
    add_subdirectory("KS0108")
elseif(EOS_USE_DRIVER_RGB)
    add_subdirectory("RGB")
elseif(EOS_USE_DRIVER_SSD1306)
    add_subdirectory("SSD1306")
elseif(EOS_USE_DRIVER_ST7565)
    add_subdirectory("ST7565")
endif()
